--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>Prime_Scrum</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	
+
 	<!-- Codificação UTF-8 -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -41,7 +41,7 @@
 			<version>4.2.6.Final</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<!-- Implementação de EntityManager da JPA -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -49,7 +49,7 @@
 			<version>4.2.6.Final</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<!-- Driver JDBC do MySQL -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -72,7 +72,7 @@
 			<artifactId>weld-servlet</artifactId>
 			<version>2.0.4.Final</version>
 			<scope>compile</scope>
-		</dependency> 
+		</dependency>
 
 		<!-- Implementacao do Bean Validation -->
 		<dependency>
@@ -97,6 +97,13 @@
 			<version>1.6</version>
 			<scope>compile</scope>
 		</dependency>
-
+		
+		<!-- PrimeFaces (Todos os temas) 
+		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>all-themes</artifactId>
+			<version>1.0.10</version>
+		</dependency>
+-->
 	</dependencies>
 </project>
