--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,19 @@
 			<version>1.6</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.0.2.RELEASE</version>
+		</dependency>
+
+
 		<!-- PrimeFaces (Todos os temas) 
 		<dependency>
 			<groupId>org.primefaces.themes</groupId>
 			<artifactId>all-themes</artifactId>
 			<version>1.0.10</version>
-		</dependency>
--->
-	</dependencies>
+		</dependency>-->
+	</dependencies> 
 </project>
