Inicio de Crud Dev,Sm Proj

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
 			<version>5.0.1.Final</version>
 			<scope>compile</scope>
 		</dependency>
+		
 
 		<!-- PrimeFaces (biblioteca de componentes) -->
 		<dependency>
@@ -98,12 +99,12 @@
 			<scope>compile</scope>
 		</dependency>
 
-		<dependency>
+		<!--  <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>4.0.2.RELEASE</version>
 		</dependency>
-
+-->
 
 		<!-- PrimeFaces (Todos os temas) 
 		<dependency>
