--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,15 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<repositories>
+    <repository>
+        <id>prime-repo</id>
+        <name>PrimeFaces Maven Repository</name>
+        <url>http://repository.primefaces.org</url>
+        <layout>default</layout>
+    </repository>
+</repositories>
+
 	<build>
 		<plugins>
 			<!-- Plugin de compilação Java 7 -->
@@ -62,7 +71,7 @@
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.faces</artifactId>
-			<version>2.2.5</version>
+			<version>2.2.6</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -106,11 +115,11 @@
 		</dependency>
 -->
 
-		<!-- PrimeFaces (Todos os temas) 
+		<!-- PrimeFaces (Todos os temas) -->
 		<dependency>
 			<groupId>org.primefaces.themes</groupId>
 			<artifactId>all-themes</artifactId>
 			<version>1.0.10</version>
-		</dependency>-->
+		</dependency>
 	</dependencies> 
 </project>
