--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,10 +22,10 @@
 		<param-value>false</param-value>
 	</context-param>
 
-	<!-- <context-param>
+	<context-param>
 		<param-name>primefaces.THEME</param-name>
 		<param-value>afternoon</param-value>
-	</context-param> -->
+	</context-param> 
 	
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
