--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,22 +25,29 @@
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
 		<param-value>afternoon</param-value>
-	</context-param> 
-	
+	</context-param>
+
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
-	
+
 	<security-constraint>
 		<display-name>Bloqueio de acesso aos arquivos XHMTL</display-name>
 		<web-resource-collection>
 			<web-resource-name>xhtml files</web-resource-name>
 			<url-pattern>*.xhtml</url-pattern>
 		</web-resource-collection>
-		<auth-constraint/>
+		<auth-constraint />
 	</security-constraint>
 
 	<listener>
 		<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
 	</listener>
+
+	<resource-env-ref>
+		<resource-env-ref-name>BeanManager</resource-env-ref-name>
+		<resource-env-ref-type>
+			javax.enterprise.inject.spi.BeanManager
+		</resource-env-ref-type>
+	</resource-env-ref>
 </web-app>
