--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -62,26 +62,27 @@
 	<!-- Spring Security 
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
-		</filter-class>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
  
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
+		<dispatcher>FORWARD</dispatcher>
+		<dispatcher>REQUEST</dispatcher>
 	</filter-mapping>
 	
 	<listener>
     	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener> -->
+	</listener> 
+ -->
 
 
 
-
-	<!-- SPRING SECURITY
+	<!-- SPRING SECURITY 
 	<context-param>
 
-		<param-name>contextConfigLocation</param-name>
+	<param-name>contextConfigLocation</param-name>
 		<param-value>
            /WEB-INF/applicationContext-security.xml
   		</param-value>
@@ -95,5 +96,7 @@
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
+	</filter-mapping>
+	--> 
+	 
 </web-app>
